<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multi-Activity App</string>
    <string name="Add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_view">DetailViewActivity</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="race">Race</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_race">Enter Race</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

</resources>
