<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.brianstacks.multi_activityapp.Fragments.DetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text1" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textAllCaps="true"
        android:textStyle="bold"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text2"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/race"
        android:textAllCaps="true"
        android:textStyle="bold"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text3"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:onClick="onDelete"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:onClick="onShare"/>

</LinearLayout>
